Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>testando se ta funcionando mesmo</h1>
+    <h1>testando se ta funcionando mesmo2</h1>
 </body>
 </html>
